--- a/src/Pages/_Layout.cshtml
+++ b/src/Pages/_Layout.cshtml
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+    <link rel="icon" href="~/images/logo.png" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorAppWithCosmosDb.styles.css" rel="stylesheet" />
