--- a/src/Pages/Index.razor
+++ b/src/Pages/Index.razor
@@ -23,10 +23,10 @@ else
             <p class="text-center">No products available. Check back later</p>
         }
         else {
-            <div class="container">
-                <div class="card" style="width: 18rem;">
-                    @foreach (var product in products)
-                    {
+            <div class="row">
+                @foreach (var product in products)
+                {
+                    <div class="card" style="width: 30rem;">
                         <img src=@product.ProductUrl class="card-img-top" alt=@product.ProductDescription>
                         <div class="card-body">
                             <h5 class="card-title">@product.ProductName</h5>
@@ -35,8 +35,8 @@ else
                             </p>
                             @*<a href="#" class="btn btn-primary">Go somewhere</a>*@
                         </div>
-                    }
-                </div>
+                    </div>
+                }                
             </div>
         }       
     }  
